# zuna-rs

./: Cargo.toml  README.md  benchmark.sh  run.sh
data/: channel_bench_ablation_embeddings.npy  channel_bench_ablation_labels.npy  channel_bench_labels.npy  channel_bench_region_embeddings.npy  channel_bench_region_labels.npy  channel_bench_strategy_labels.npy  csv_embeddings.safetensors  embeddings.safetensors  output.safetensors  sample.csv  sample1_raw.fif
examples/: channel_bench.rs  csv_embed.rs  embed.rs  embedding_api.rs  infer.rs
examples/common/: mod.rs
figures/: bench_data_cpu_unknown.json  bench_data_gpu_apple_m3_max.json  channel_bench_ablation_results.json  channel_bench_region_results.json  channel_bench_results.json  channel_bench_strategy_results.json
scripts/: bench_and_visualize.py  umap_channel_bench.py
src/: channel_positions.rs  config.rs  csv_export.rs  csv_loader.rs  data.rs  decoder.rs  encoder.rs  inference.rs  lib.rs  weights.rs
src/model/: attention.rs  conditioner.rs  cross_attention.rs  decoder.rs  decoder_block.rs  encoder.rs  encoder_block.rs  encoder_decoder.rs  feedforward.rs  mod.rs  norm.rs  rope.rs
tests/: csv_loader.rs  encode_decode.rs
tests/helpers/: csv_gen.rs  mod.rs
